changed image file issues

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 		<!--portfolio items -->
 		<!-- first project-->
 		<a href="https://scratch.mit.edu/projects/119909407">
-			<img src="images/scratchPlay.PNG">>
+			<img src="images/scratchplay.png">>
 		</a>
 		<p>This is my partner, Julian, and my Scratch Project. Our goal was to create a music player. 
 		Music is played when the song is selected</p>
@@ -32,7 +32,7 @@
 			<img src="images/replit.png">
 		</a><br>
 		<p>This is a test created on repl.it. It was done for the class of chemistry. The picture of the flowchart is below.</p><br>
-        <img src="images/flowchart.PNG" height="300">
+        <img src="images/flowchart.png" height="300">
   </body>
 
 </html>
