--- a/portfolio.html
+++ b/portfolio.html
@@ -34,5 +34,8 @@
 		<p>This is a test created on repl.it. It was done for the class of chemistry. The picture of the flowchart is below.</p><br>
         <img src="images/flowchart.png" height="300">
   </body>
-
+  <!--pltw Act project -->
+  		<a href = "https://repl.it/DzmH/2">
+			<img src="images/e_and_e.jpg">
+		</a><br>
 </html>
