--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <a href="portfolio.html">Portfolio</a>
     <h1>Welcome To ErickLand!</h1>
     <center><img src="images/images.jpg" height="300"><center>
-	<font face="Times New Roman" color="red">My name is Erick Torres, remember that name for when I rule the world! 
-	I am currently at Ayala High School and I am 16. I am trying to get a cood grade in this CSP class so I must write this Bio</font>
-		<h1>yes</h1>
-		<center><img src="images/download.jpg" height="250"><center>
+	<font face="Times New Roman" color="red">My name is Erick Torres, I am a 16 year old currecntly residing in California. 
+	I attend Ayala High School and I am in the 11th grade. With the help of my CSP class, I was able to create all of these programs which also
+	include this website.</font>
+		<center><img src="images/erickt.jpg" height="250"><center>
 	
   </body>
 </html>
