--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,6 @@
   </body>
   <!--pltw Act project -->
   		<a href = "https://repl.it/DzmH/2">
-			<img src="images/e_and_e.jpg">
+			<img src="images/e_and_e.jpg" height="300">
 		</a><br>
 </html>
