--- a/portfolio.html
+++ b/portfolio.html
@@ -37,5 +37,7 @@
   <!--pltw Act project -->
   		<a href = "https://repl.it/DzmH/2">
 			<img src="images/e_and_e.jpg" height="300">
+			</a><br>
+			<p>This is our first act project. Matthew and I created snakes and escalatore</p><br>
 		</a><br>
 </html>
