--- a/portfolio.html
+++ b/portfolio.html
@@ -31,13 +31,14 @@
 		<a href = "https://repl.it/D94a/103">
 			<img src="images/replit.png">
 		</a><br>
-		<p>This is a test created on repl.it. It was done for the class of chemistry. The picture of the flowchart is below.</p><br>
+		<p>This is a test created on repl.it. It was done for the class of chemistry. It is a basic Chemistry multiple choice test that will require ablout twenty minutes to do.
+		The picture of the flowchart is below.</p><br>
         <img src="images/flowchart.png" height="300">
   </body>
   <!--pltw Act project -->
   		<a href = "https://repl.it/DzmH/2">
 			<img src="images/e_and_e.jpg" height="300">
 			</a><br>
-			<p>This is our first act project. Matthew and I created snakes and escalatore</p><br>
+			<p>This is our first act project. Matthew and I created Eels and Escalators from the TV show Spongebob.</p><br>
 		</a><br>
 </html>
