--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
 <!-- The tags below are what is displayed on the actual page -->
   <body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
+    <center></center><a href="index.html">Home</a>
+    </center><a href="portfolio.html">Portfolio</a>
     <h1>Welcome To ErickLand!</h1>
     <center><img src="images/images.jpg" height="300"><center>
 	<font face="Times New Roman" color="red">My name is Erick Torres, I am a 16 year old currecntly residing in California. 
