--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
 <!-- The tags below specify the meta (browser data) and page title -->
   <head>
-  <body background="images/th.jpg">
     <meta charset="utf-8">
-	<link href="ocean.css" rel="stylesheet" type="text/css">
+	  <link href="ocean.css" rel="stylesheet" type="text/css">
     <title>Home</title>
   </head>
 <!-- The tags below are what is displayed on the actual page -->
-  <body>
-    <center></center><a href="index.html">Home</a>
-    </center><a href="portfolio.html">Portfolio</a>
+  <body background="images/th.jpg">
+    <center>
+      <a href="index.html">Home</a>
+      <a href="portfolio.html">Portfolio</a>
+    </center>
+    
     <h1>Welcome To ErickLand!</h1>
     <center><img src="images/images.jpg" height="300"><center>
-	<font face="Times New Roman" color="red">My name is Erick Torres, I am a 16 year old currecntly residing in California. 
-	I attend Ayala High School and I am in the 11th grade. With the help of my CSP class, I was able to create all of these programs which also
-	include this website.</font>
+	  <font face="Times New Roman" color="red">My name is Erick Torres, I am a 16 year old currecntly residing in California. 
+	  I attend Ayala High School and I am in the 11th grade. With the help of my CSP class, I was able to create all of these programs which also
+	  include this website.</font>
 		<center><img src="images/erickt.jpg" height="450"><center>
 	
   </body>
