--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 			<img src="images/scratchplay.png">>
 		</a>
 		<p>This is my partner, Julian, and my Scratch Project. Our goal was to create a music player. 
-		Music is played when the song is selected</p>
+		Music is played when the song is selected.</p>
 		
 		<!-- Scratch project-->
 		<a href = "https://drive.google.com/file/d/0B2GMrjoqWaxfQWJycWdkNHIzWjA/view?usp=sharing">
@@ -31,14 +31,16 @@
 		<a href = "https://repl.it/D94a/103">
 			<img src="images/replit.png">
 		</a><br>
-		<p>This is a test created on repl.it. It was done for the class of chemistry. It is a basic Chemistry multiple choice test that will require ablout twenty minutes to do.
-		The picture of the flowchart is below.</p><br>
+		<p>This is a test created on repl.it. It is a basic Chemistry multiple choice test that will require ablout twenty minutes to do.
+		The picture of the flowchart used to create it is below.</p><br>
         <img src="images/flowchart.png" height="300">
   </body>
   <!--pltw Act project -->
-  		<a href = "https://repl.it/DzmH/2">
+  <center>
+  		<a href = "https://repl.it/DzmH/7">
 			<img src="images/e_and_e.jpg" height="300">
 			</a><br>
-			<p>This is our first act project. Matthew and I created Eels and Escalators from the TV show Spongebob.</p><br>
+			<p>This is our first act project. My partner ,Matthew, and I created Eels and Escalators from the TV show Spongebob. This was done on repl.it</p><br>
 		</a><br>
+	</center>	
 </html>
