--- a/portfolio.html
+++ b/portfolio.html
@@ -17,34 +17,34 @@
 		<!--portfolio items -->
 		<!-- first project-->
 		<center>
-		<a href="https://scratch.mit.edu/projects/119909407">
-			<img src="images/scratchplay.png">>
-		</a>
-		<p>This is my partner, Julian, and my Scratch Project. Our goal was to create a music player. 
-		Music is played when the song is selected.</p>
+			<a href="https://scratch.mit.edu/projects/119909407">
+				<img src="images/scratchplay.png">>
+			</a>
+			<p>This is my partner, Julian, and my Scratch Project. Our goal was to create a music player. 
+			Music is played when the song is selected.</p>
 		</center>
 		<!-- Scratch project-->
 		<center>
-		<a href = "https://drive.google.com/file/d/0B2GMrjoqWaxfQWJycWdkNHIzWjA/view?usp=sharing">
-		</a><br>
-		<p> This is the link to the <a href = "URL">backlog spreadsheet.</a><br>
+			<a href = "https://drive.google.com/file/d/0B2GMrjoqWaxfQWJycWdkNHIzWjA/view?usp=sharing">
+			</a><br>
+			<p> This is the link to the <a href = "URL">backlog spreadsheet.</a><br>
 		</center>
 		<!--Python Interactive English -->
 		<center>
-		<a href = "https://repl.it/D94a/103">
-			<img src="images/replit.png">
-		</a><br>
-		<p>This is a test created on repl.it. It is a basic Chemistry multiple choice test that will require ablout twenty minutes to do.
-		The picture of the flowchart used to create it is below.</p><br>
-        <img src="images/flowchart.png" height="300">
-  </body>
+			<a href = "https://repl.it/D94a/103">
+				<img src="images/replit.png">
+			</a><br>
+			<p>This is a test created on repl.it. It is a basic Chemistry multiple choice test that will require ablout twenty minutes to do.
+			The picture of the flowchart used to create it is below.</p><br>
+  	      <img src="images/flowchart.png" height="300">
+	  </body>
   </center>
   <!--pltw Act project -->
   <center>
 			<p>This is our first act project. My partner ,Matthew, and I created Eels and Escalators from the TV show Spongebob. This was done on repl.it</p><br>
 		</a><br>  	
   		<a href = "https://repl.it/DzmH/7">
-			<img src="images/e_and_e.jpg" height="300">
+			<img src="images/eels_&escalators.png" height="300">
 			</a><br>
 	</center>	
 </html>
