--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
 			<p>This is our first act project. My partner ,Matthew, and I created Eels and Escalators from the TV show Spongebob. This was done on repl.it</p><br>
 		</a><br>  	
   		<a href = "https://repl.it/DzmH/7">
-			<img src="images/eels_&escalators.png" height="300">
+			<img src="images/e_and_e.jpg" height="300">
 			</a><br>
 	</center>	
 </html>
