--- a/portfolio.html
+++ b/portfolio.html
@@ -48,3 +48,9 @@
 			</a><br>
 	</center>	
 </html>
+<!-- Multicomputer Project-->
+		<center>
+			<a href = "https://docs.google.com/presentation/d/1qV2gMx72y0L4863-upJkwhuAY6VzUoFc2M6POCWhqDI/pub?start=false&loop=false&delayms=3000">
+			</a><br>
+			<p> This is the link to the <a href = "URL">reCAPTCHA powerpoint.</a><br>
+		</center>
