--- a/portfolio.html
+++ b/portfolio.html
@@ -54,3 +54,9 @@
 			</a><br>
 			<p> This is the link to the <a href = "https://docs.google.com/presentation/d/1qV2gMx72y0L4863-upJkwhuAY6VzUoFc2M6POCWhqDI/pub?start=false&loop=false&delayms=3000">reCAPTCHA powerpoint.</a><br>
 		</center>
+<!-- GC Project-->
+		<center>
+			<a href = "https://drive.google.com/open?id=0B8SO58vvaWlENWJ1WWVTLWN4ZUU">
+			</a><br>
+			<p> This is the link to the <a href = "https://drive.google.com/open?id=0B8SO58vvaWlENWJ1WWVTLWN4ZUU"> English GC project.</a><br>
+		</center>
