--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
 		</center>
 <!-- GC Project-->
 		<center>
-			<a href = "https://drive.google.com/open?id=0B8SO58vvaWlENWJ1WWVTLWN4ZUU">
+			<a href = "https://drive.google.com/file/d/0B8SO58vvaWlEeE81eXYtQ2txRTA/view?usp=sharing">
 			</a><br>
-			<p> This is the link to the <a href = "https://drive.google.com/open?id=0B8SO58vvaWlENWJ1WWVTLWN4ZUU"> English GC project.</a><br>
+			<p> This is the link to the English GC,<a href = "https://drive.google.com/file/d/0B8SO58vvaWlEeE81eXYtQ2txRTA/view?usp=sharing"> Crazy With A Hint Of Lemon.</a><br>
 		</center>
