--- a/portfolio.html
+++ b/portfolio.html
@@ -64,5 +64,5 @@
 		<center>
 			<a href = "https://drive.google.com/open?id=0B8SO58vvaWlEaF9nSDhMOEdqeGM">
 			</a><br>
-			<p> This is the link to the Data Project<a href = "https://drive.google.com/open?id=0B8SO58vvaWlEaF9nSDhMOEdqeGM"> .</a><br>
+			<p> This is the link to the Data Project<a href = "https://drive.google.com/open?id=0B8SO58vvaWlEaF9nSDhMOEdqeGM"> <img src="images/e_and_e.jpg" height="300">.</a><br>
 		</center>
