--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,9 @@
 			<p> This is the link to the English GC,<a href = "https://drive.google.com/file/d/0B8SO58vvaWlEeE81eXYtQ2txRTA/view?usp=sharing"> Crazy With A Hint Of Lemon.</a><br>
 		</center>
 <!-- GC Project-->
+		</center>
+		<!-- GC Project-->
 		<center>
-			<a href = "https://drive.google.com/open?id=0B8SO58vvaWlEaF9nSDhMOEdqeGM">
+			<a href = "3.2.1 Project JCastro,ETorres.zip"> Click Here to download data zip</a><br>
 			</a><br>
-			<p> This is the link to the <a href = "https://drive.google.com/open?id=0B8SO58vvaWlEaF9nSDhMOEdqeGM"> Data Project.</a><br>
 		</center>
