--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,6 @@
 		</center>
 		<!-- GC Project-->
 		<center>
-			<a href = "3.2.1 Project JCastro,ETorres.zip"> Click Here to download data zip</a><br>
+			<a href = "3.2.1 Project JCastro,ETorres.zip (3)"> Click Here to download data zip</a><br>
 			</a><br>
 		</center>
