--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
 
 <!-- 4.2.3 Project-->
 		</center>
-		<!-- GC Project-->
+		<!-- 4.2.3 Project-->
 		<center>
 			<a href = "https://drive.google.com/open?id=0B8SO58vvaWlEX1VCTWt3QkF0RnM"> This is 4.2.3. It is a modified simulation that Arianna Mcdonald and I created along with a written report.</a><br>
 			</a><br>
