--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,6 @@
 		</center>
 		<!-- 4.2.3 Project-->
 		<center>
-			<a href = "https://drive.google.com/open?id=0B8SO58vvaWlEX1VCTWt3QkF0RnM"> This is 4.2.3. It is a modified simulation that Arianna Mcdonald and I created along with a written report.</a><br>
+			<p>This is 4.2.3. It is a modified simulation that Arianna Mcdonald and I created along with a written report.<a href = "https://drive.google.com/open?id=0B8SO58vvaWlEX1VCTWt3QkF0RnM"> Click here to download.</a><br>
 			</a><br>
 		</center>
